# compdecks

./: .gitignore  CD.db  README.md  app.py  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js  test_quiz.csv
.devcontainer/: devcontainer.json
.github/workflows/: python-package.yml
compdeck/: __init__.py  auth.py  db.py  schema.sql
compdecks/: __init__.py  auth.py  content.py  db.py  deck.py  explore.py  schema.sql
compdecks/static/: output.css
compdecks/templates/: layout.html
compdecks/templates/auth/: login.html  register.html
compdecks/templates/content/: _macros.html  create.html  create_question.html  deck.html  deck_details.html  index.html  multiple_choice.html  question.html  quiz.html  result.html  settings.html
compdecks/templates/explore/: explore.html  user_decks.html
compdecks/user_uploads/: history.csv  math.csv  science.csv
flaskr/: __init__.py  auth.py
flaskr/templates/: index.html  login.html
static/: main.css
templates/: explore.html  index.html  layout.html  login.html  register.html
tests/: conftest.py  data.sql  test_auth.py  test_content.py  test_db.py  test_factory.py
